###################################################################################################
# Copyright © 2021 Neal Meswania
# Lisence: MIT
###################################################################################################

from abc import ABC, abstractmethod

from pathlib import Path

###################################################################################################
###################################################################################################
###################################################################################################


class WidgetRendererBase(ABC):

  @abstractmethod
  def Terminate(self):
    ...

  @abstractmethod
  def Clear(self):
    ...


###################################################################################################
###################################################################################################
###################################################################################################


class WidgetBase(ABC):

  @abstractmethod
  def renderer(self):
    ...

  @abstractmethod
  def _LoadData(self, file_path: Path):
    ...

  @abstractmethod
  def _BuildRenderer(self):
    ...


###################################################################################################
###################################################################################################
###################################################################################################
