@startuml component_diagram

component AppRunner
component Viewer
component RequestHandler

interface RequestHandlerManager

Viewer -( RequestHandlerManager
RequestHandlerManager - RequestHandler

@enduml



@startuml class_diagram

class AppRunner {
  + viewer_process : multiprocessing.Process
  + interface_process : multiprocessing.Process
  + request_handler_request_queue : multiprocessing.Queue
  + request_handler_response_queue : multiprocessing.Queue
  + request_handler_pool : multiprocessing.Pool
}
class Viewer {
  + request_handler_request_queue : multiprocessing.Queue
  + request_handler_response_queue : multiprocessing.Queue
}
class RequestHandlerManager {
  + request_handler_request_queue : multiprocessing.Queue
  + request_handler_response_queue : multiprocessing.Queue
  + request_handler_pool : multiprocessing.Pool
}
class RequestHandler {
  + request_handler_pool : multiprocessing.Pool
}

AppRunner <-- Viewer
AppRunner <-- RequestHandlerManager

Viewer <- RequestHandlerManager

RequestHandler <-up- RequestHandlerManager

@enduml



@startuml viewer_structure

package app_runner {
class AppRunner
}

package viewer {
class Viewer
}

package viewer_widgets {
class WidgetManager {
  + GetRenderers() : list
  - _widgets : list
}
abstract WidgetBase {
  + {abstract} renderer() : Renderer
  - _renderer : Renderer
}
abstract WidgetRendererBase {
  + {abstract} build() : Renderer
  - _widget : Widget
}

package spell_list {
class SpellList
class SpellListRenderer
}

}

AppRunner <-- WidgetManager
AppRunner <-- Viewer

Viewer <- WidgetManager

WidgetManager <-- SpellList

WidgetBase <|-up- SpellList
WidgetRendererBase <|-up- SpellListRenderer

SpellList <- SpellListRenderer

@enduml
